retour de la branch master fonctionnelle

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
             détendre et se concentrer sur son travail. Et il vécut heureux pour toujours.
         </p>
     </div>
-    <img class="jenkinspixel" src="/static/jenkinspixel.png"
+    <img class="jenkinspixel" src="../static/jenkinspixel.png"
         alt="Jenkins avec un écran d'ordinateur en pixel --> Dall-E2">
 </body>
 </body>
